--- a/index.html
+++ b/index.html
@@ -1,3 +1,35 @@
-Ahmad Saifi
-Mancing
-Wapres
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Microsoft</title>
+</head>
+<body>
+    <h1>MICROSOFT COMPANY</h1>
+    <div class="header">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+    <div class="content">
+        <div class="desc-company">
+            <img src="microsoft.png" alt="" width="300px" height="300px">
+            <p>Microsoft adalah perusahaan teknologi global yang didirikan pada tahun 1975 oleh Bill Gates dan Paul Allen. Berbasis di Redmond, Washington, perusahaan ini terkenal karena sistem operasi Windows, perangkat lunak produktivitas seperti Microsoft Office, serta layanan cloud Azure. Microsoft juga memproduksi perangkat keras, termasuk konsol Xbox dan perangkat Surface. Perusahaan ini merupakan salah satu yang terbesar dan paling berpengaruh di dunia teknologi, berfokus pada inovasi di bidang komputasi awan, kecerdasan buatan, dan solusi perangkat lunak.</p>
+        </div>
+        <div class="service">
+            <h1>Layanan Kami</h1>
+            <p>Microsoft menawarkan berbagai layanan, termasuk sistem operasi Windows, Microsoft Office, dan platform cloud Azure untuk komputasi awan dan AI. Mereka juga menyediakan Microsoft Teams untuk kolaborasi, GitHub untuk pengembang, serta produk perangkat keras seperti Surface dan Xbox. Selain itu, layanan bisnisnya mencakup Dynamics 365 dan LinkedIn untuk jejaring profesional.</p>
+        </div>
+    </div>
+    <div class="footer">
+        <span>Nama bisnis : Microsoft<i class="fa-brands fa-microsoft"></i></span><br>
+        <span>Alamat bisnis : Mejasem</span>
+    </div>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+</body>
+</html>
