--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
             <h1><b>MICROSOFT COMPANY</b></h1><hr>
             <p class="p">Innovating for a brighter tomorrow</p>
         </section>
-
-        <section>
-            <div>
-                <ul class="navbar">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </div>
-        </section>
+        <nav>
+            <ul class="navbar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -31,100 +28,99 @@
                 <p align="left">Microsoft, didirikan pada 1975, adalah perusahaan teknologi global yang terkenal dengan Windows, Microsoft Office, dan Azure. Selain perangkat keras seperti Xbox dan Surface, Microsoft berfokus pada inovasi di komputasi awan, kecerdasan buatan, dan perangkat lunak.</p><br>
                 <a href="#" class="btn-selengkapnya">Selengkapnya</a>
             </div>
-            <img src="microsoft.png" alt="" width="500px" height="350px">
+            <img src="microsoft.png" alt="Microsoft" width="500px" height="350px">
         </section>
 
         <section class="service">
             <div class="layanan">
                 <h1>Layanan Kami</h1>
-                <p align="justify">Microsoft menawarkan berbagai layanan, termasuk sistem operasi Windows, Microsoft Office, dan platform cloud Azure untuk komputasi awan dan AI. Mereka juga menyediakan Microsoft Teams untuk kolaborasi, GitHub untuk pengembang, serta produk perangkat keras seperti Surface dan Xbox. Selain itu, layanan bisnisnya mencakup Dynamics 365 dan LinkedIn untuk jejaring profesional.</p>
+                <p align="justify">Microsoft menawarkan berbagai layanan, termasuk sistem operasi Windows, Microsoft Office, dan platform cloud Azure untuk komputasi awan dan AI. Mereka juga menyediakan Microsoft Teams untuk kolaborasi, GitHub untuk pengembang, serta produk perangkat keras seperti Surface dan Xbox.</p>
             </div>
             <table class="table" border="1">
                 <thead align="center">
                     <tr>
-                        <td><b>Nama Layanan</b></td>
-                        <td><b>Deskripsi</b></td>
-                        <td><b>Harga</b></td>
+                        <th>Nama Layanan</th>
+                        <th>Deskripsi</th>
+                        <th>Harga</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     <tr>
                         <td>Microsoft 365</td>
-                        <td>Microsoft 365 adalah rangkaian aplikasi produktivitas berbasis cloud, yang mencakup aplikasi populer seperti Word, Excel, PowerPoint, Outlook, dan Microsoft Teams. Layanan ini juga menyediakan penyimpanan cloud OneDrive dan alat kolaborasi bisnis.</td>
+                        <td>Microsoft 365 adalah rangkaian aplikasi produktivitas berbasis cloud, termasuk Word, Excel, PowerPoint, dan Teams.</td>
                         <td>Rp 909.999/tahun</td>
                     </tr>
                     <tr>
                         <td>Microsoft Azure</td>
-                        <td>Azure adalah platform komputasi cloud yang menawarkan berbagai layanan, termasuk penyimpanan, analisis, jaringan, dan hosting aplikasi. Layanan ini digunakan oleh bisnis dan pengembang untuk membangun, mengelola, dan mengimplementasikan aplikasi di cloud. Harga: Bervariasi tergantung pada layanan dan skala penggunaan.</td>
+                        <td>Azure adalah platform komputasi cloud yang menyediakan berbagai layanan seperti penyimpanan, jaringan, dan hosting aplikasi.</td>
                         <td>Rp 70.000/bulan</td>
                     </tr>
                     <tr>
                         <td>Xbox Game Pass</td>
-                        <td>Xbox Game Pass adalah layanan langganan game yang memungkinkan pengguna mengakses ratusan game di konsol Xbox dan PC, termasuk game baru dari studio-studio besar.</td>
+                        <td>Xbox Game Pass adalah layanan berlangganan yang memberi akses ke ratusan game di konsol Xbox dan PC.</td>
                         <td>Rp 135.000/bulan</td>
                     </tr>
                     <tr>
-                        <td>Microsoft One Drive</td>
-                        <td>OneDrive adalah layanan penyimpanan cloud dari Microsoft yang memungkinkan pengguna menyimpan, berbagi, dan menyinkronkan file di berbagai perangkat. OneDrive terintegrasi dengan Microsoft 365, memudahkan kolaborasi dan berbagi dokumen di cloud.</td>
+                        <td>OneDrive</td>
+                        <td>OneDrive adalah layanan penyimpanan cloud yang memungkinkan pengguna untuk menyimpan dan berbagi file online.</td>
                         <td>Rp 26.999/bulan</td>
                     </tr>
                 </tbody>
             </table>
-        </section><br><br>
+        </section>
 
-        <section> <!-- Product -->
+        <section class="product">
             <div class="desc-card">
                 <h1>Produk Kami</h1>
-                <P>Microsoft adalah perusahaan teknologi global yang terkenal dengan sistem operasi Windows, paket aplikasi produktivitas Microsoft Office, dan layanan komputasi awan Azure. Melalui Microsoft 365, pengguna dapat mengakses aplikasi Office beserta penyimpanan cloud OneDrive dan alat kolaborasi, menjadikannya pilihan utama untuk meningkatkan efisiensi dan produktivitas.</P>
+                <p>Microsoft terkenal dengan sistem operasi Windows, aplikasi produktivitas seperti Office, dan layanan cloud Azure.</p>
             </div>
             <div class="card-container">
                 <div class="card">
                     <img src="microsoft365.jpg" style="width: 150px;">
-                    <h1 class="">Mie Gacoan</h1>
-                    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, mollitia.</p>
+                    <h1>Microsoft 365</h1>
+                    <p>Microsoft 365 adalah layanan berlangganan dengan aplikasi produktivitas dan fitur cloud.</p>
                 </div>
                 <div class="card">
                     <img src="onedrive.jpg" style="width: 150px;">
-                    <h1 class="">Mie Gacoan</h1>
-                    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, mollitia.</p>
+                    <h1>OneDrive</h1>
+                    <p>OneDrive adalah layanan penyimpanan cloud untuk menyimpan dan berbagi file online.</p>
                 </div>
                 <div class="card">
                     <img src="xbox.jpg" style="width: 150px;">
-                    <h1 class="">Mie Gacoan</h1>
-                    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, mollitia.</p>
+                    <h1>Xbox Pass</h1>
+                    <p>Xbox Game Pass adalah layanan berlangganan dengan akses ke ratusan game.</p>
                 </div>
                 <div class="card">
                     <img src="azure.jpg" style="width: 150px;">
-                    <h1 class="">Mie Gacoan</h1>
-                    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, mollitia.</p>
+                    <h1>Microsoft Azure</h1>
+                    <p>Azure adalah platform cloud Microsoft untuk komputasi dan penyimpanan.</p>
                 </div>
             </div>
-        </section>        
+        </section>
 
         <section class="contact-us">
             <form action="" method="post">
                 <h1>Kontak Kami</h1>
-                <label for="">Nama</label>
-                <input type="text" placeholder="Masukkan nama..." required>
-                <br><br>
-                <label for="">Email</label>
-                <input type="text" placeholder="Masukkan email..." required>
-                <br><br>
-                <label for="">Pesan</label>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Masukkan pesan..." required></textarea>
-                <br><br>
-                <button>Submit</button>
+                <label for="name">Nama</label>
+                <input type="text" id="name" placeholder="Masukkan nama..." required>
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Masukkan email..." required>
+                <label for="message">Pesan</label>
+                <textarea id="message" cols="30" rows="5" placeholder="Masukkan pesan..." required></textarea>
+                <button type="submit">Submit</button>
             </form>
         </section>
-    </main><br><br>
+    </main>
 
     <footer>
         <section class="deskripsi">
-            <span>Nama bisnis : Microsoft<i class="fa-brands fa-microsoft"></i></span><br>
-            <span>Alamat bisnis : Mejasem</span>
+            <span>Nama bisnis: Microsoft</span><br>
+            <span>Alamat bisnis: Mejasem</span><br>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-x-twitter"></i>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         </section>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </footer>
 </body>
 </html>
