--- a/index.html
+++ b/index.html
@@ -5,65 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MICROSOFT COMPANY</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
-        <section class="nama-bisnis">
-            <h1><b>MICROSOFT COMPANY</b></h1><hr>
-            <p class="p">Innovating for a brighter tomorrow</p>
-        </section>
         <nav>
+            <section class="nama-bisnis">
+                <!-- <h1><b>Jersey Central</b></h1><hr>
+                <p class="p">Your Jersey, Your Pride</p> -->
+                <img src="logoo.png" width="30%" alt="">
+            </section>
             <ul class="navbar">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About</a></li>
             </ul>
+            <section class="btn-toggle"><i class="fa-solid fa-bars"></i></section>
+            <section class="dropdown-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
+            </section>
         </nav>
     </header>
 
     <main>
         <section class="desc-company">
             <div class="desc">
-                <h1>Welcome to Microsoft Family</h1><br>
-                <p align="left">Microsoft, didirikan pada 1975, adalah perusahaan teknologi global yang terkenal dengan Windows, Microsoft Office, dan Azure. Selain perangkat keras seperti Xbox dan Surface, Microsoft berfokus pada inovasi di komputasi awan, kecerdasan buatan, dan perangkat lunak.</p><br>
-                <a href="#" class="btn-selengkapnya">Selengkapnya</a>
+                <h1>Welcome to Jersey Central</h1><br>
+                <p align="left">Jersey Central adalah destinasi utama untuk jersey sepak bola, di mana gairah bertemu dengan gaya. Dengan berbagai pilihan jersey asli, kami membantu Anda <b>Wear Your Pride, And Support Your Team</b> dengan penuh gaya. Baik di lapangan maupun saat mendukung dari luar, Jersey Central memberikan perlengkapan sempurna untuk menunjukkan kecintaan Anda pada permainan.</p><br>
+                <a href="#" class="btn-selengkapnya">More</a>
             </div>
-            <img src="microsoft.png" alt="Microsoft" width="500px" height="350px">
+            <img src="alsesoris.png" alt="Aksesoris" width="30%" height="30%">
         </section>
 
         <section class="service">
             <div class="layanan">
-                <h1>Layanan Kami</h1>
-                <p align="justify">Microsoft menawarkan berbagai layanan, termasuk sistem operasi Windows, Microsoft Office, dan platform cloud Azure untuk komputasi awan dan AI. Mereka juga menyediakan Microsoft Teams untuk kolaborasi, GitHub untuk pengembang, serta produk perangkat keras seperti Surface dan Xbox.</p>
+                <h1>Our Service</h1>
+                <p align="justify">Jersey Central menawarkan jersey sepak bola original, kustomisasi nama dan nomor, aksesori sepak bola, serta koleksi retro dan edisi terbatas. Kami juga menyediakan layanan pembelian online dengan pengiriman cepat dan promo spesial. Tim layanan pelanggan kami siap membantu Anda memilih produk terbaik.</p>
             </div>
             <table class="table" border="1">
                 <thead align="center">
                     <tr>
-                        <th>Nama Layanan</th>
-                        <th>Deskripsi</th>
-                        <th>Harga</th>
+                        <th>Service</th>
+                        <th>Description</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Microsoft 365</td>
-                        <td>Microsoft 365 adalah rangkaian aplikasi produktivitas berbasis cloud, termasuk Word, Excel, PowerPoint, dan Teams.</td>
-                        <td>Rp 909.999/tahun</td>
+                        <td>Original Jersey</td>
+                        <td>Menyediakan koleksi jersey asli dari tim domestik dan internasional dengan kualitas terbaik</td>
                     </tr>
                     <tr>
-                        <td>Microsoft Azure</td>
-                        <td>Azure adalah platform komputasi cloud yang menyediakan berbagai layanan seperti penyimpanan, jaringan, dan hosting aplikasi.</td>
-                        <td>Rp 70.000/bulan</td>
+                        <td>Customize Jersey</td>
+                        <td>Personalisasi jersey dengan nama dan nomor pilihan Anda.</td>
                     </tr>
                     <tr>
-                        <td>Xbox Game Pass</td>
-                        <td>Xbox Game Pass adalah layanan berlangganan yang memberi akses ke ratusan game di konsol Xbox dan PC.</td>
-                        <td>Rp 135.000/bulan</td>
+                        <td>Football Accessories</td>
+                        <td>Berbagai aksesori sepak bola seperti kaos kaki dan pelindung tulang kering untuk kenyamanan di lapangan.</td>
                     </tr>
                     <tr>
-                        <td>OneDrive</td>
-                        <td>OneDrive adalah layanan penyimpanan cloud yang memungkinkan pengguna untuk menyimpan dan berbagi file online.</td>
-                        <td>Rp 26.999/bulan</td>
+                        <td>Retro Jersey</td>
+                        <td>Koleksi jersey klasik untuk penggemar dan kolektor nostalgia.</td>
                     </tr>
                 </tbody>
             </table>
@@ -71,29 +74,32 @@
 
         <section class="product">
             <div class="desc-card">
-                <h1>Produk Kami</h1>
-                <p>Microsoft terkenal dengan sistem operasi Windows, aplikasi produktivitas seperti Office, dan layanan cloud Azure.</p>
+                <h1>Our Product</h1>
             </div>
             <div class="card-container">
                 <div class="card">
-                    <img src="microsoft365.jpg" style="width: 150px;">
-                    <h1>Microsoft 365</h1>
-                    <p>Microsoft 365 adalah layanan berlangganan dengan aplikasi produktivitas dan fitur cloud.</p>
+                    <br>
+                    <img src="customizeJersey.png" style="width: 150px;">
+                    <h1>Customize Jersey</h1><br>
+                    <h3>Rp. 260.000</h3>
                 </div>
                 <div class="card">
-                    <img src="onedrive.jpg" style="width: 150px;">
-                    <h1>OneDrive</h1>
-                    <p>OneDrive adalah layanan penyimpanan cloud untuk menyimpan dan berbagi file online.</p>
+                    <br>
+                    <img src="chelseaJersey.png" style="width: 150px;">
+                    <h1>Chelsea Jersey (2024/2025)</h1><br>
+                    <h3>Rp. 1.200.000</h3>
                 </div>
                 <div class="card">
-                    <img src="xbox.jpg" style="width: 150px;">
-                    <h1>Xbox Pass</h1>
-                    <p>Xbox Game Pass adalah layanan berlangganan dengan akses ke ratusan game.</p>
+                    <br>
+                    <img src="tShirtYnwa.png" style="width: 150px;">
+                    <h1>T-Shirt <br> YNWA</h1><br>
+                    <h3>Rp. 240.000</h3>
                 </div>
                 <div class="card">
-                    <img src="azure.jpg" style="width: 150px;">
-                    <h1>Microsoft Azure</h1>
-                    <p>Azure adalah platform cloud Microsoft untuk komputasi dan penyimpanan.</p>
+                    <br>
+                    <img src="alsesoris.png" style="width: 150px;">
+                    <h1>Football Accessories</h1><br>
+                    <h3>Rp. 240.000</h3>
                 </div>
             </div>
         </section>
@@ -114,8 +120,8 @@
 
     <footer>
         <section class="deskripsi">
-            <span>Nama bisnis: Microsoft</span><br>
-            <span>Alamat bisnis: Mejasem</span><br>
+            <span>Nama bisnis: Jersey Central</span><br>
+            <span>Alamat bisnis: Kendalserut</span><br>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-square-x-twitter"></i>
