--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <main>
         <section class="desc-company">
             <div class="desc">
-                <h1>Welcome to Jersey Central</h1><br>
+                <h1>Welcome to Jersey Central</h1>
+                <p>Jersey and Accessories</p><br>
                 <p align="justify">Jersey Central adalah destinasi utama untuk jersey sepak bola, di mana gairah bertemu dengan gaya. Dengan berbagai pilihan jersey asli, kami membantu Anda <b>Wear Your Pride, And Support Your Team</b> dengan penuh gaya. Baik di lapangan maupun saat mendukung dari luar, Jersey Central memberikan perlengkapan sempurna untuk menunjukkan kecintaan Anda pada permainan.</p><br>
                 <a href="#" class="btn-selengkapnya">More</a>
             </div>
@@ -41,7 +42,7 @@
 
         <section class="service">
             <div class="layanan">
-                <h1>Our Service</h1>
+                <h1>Our Service</h1><br>
                 <p align="justify" class="desc-serv">Jersey Central menawarkan jersey sepak bola original, kustomisasi nama dan nomor, aksesori sepak bola, serta koleksi retro dan edisi terbatas. Kami juga menyediakan layanan pembelian online dengan pengiriman cepat dan promo spesial. Tim layanan pelanggan kami siap membantu Anda memilih produk terbaik.</p>
             </div>
             <table class="table" border="1">
@@ -74,7 +75,7 @@
 
         <section class="product">
             <div class="desc-card">
-                <h1>Our Product</h1>
+                <h1>Our Product</h1><br>
             </div>
             <div class="card-container">
                 <div class="card">
