--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <section class="product">
             <div class="desc-card">
-                <h1>Our Product</h1><br>
+                <h1>Our Product</h1>
             </div>
             <div class="card-container">
                 <div class="card">
