--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JERSEY CENTRAL</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
@@ -114,7 +115,7 @@
                 <input type="email" id="email" placeholder="Masukkan email..." required>
                 <label for="message">Pesan</label>
                 <textarea id="message" cols="30" rows="5" placeholder="Masukkan pesan..." required></textarea>
-                <button type="submit">Submit</button>
+                <button id="btnSubmit" type="submit">Submit</button>
             </form>
         </section>
     </main>
