--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <header>
         <nav>
             <section class="nama-bisnis">
-                <!-- <h1><b>Jersey Central</b></h1><hr>
-                <p class="p">Your Jersey, Your Pride</p> -->
                 <img src="logoo.png" width="30%" alt="">
             </section>
             <ul class="navbar">
@@ -22,11 +20,6 @@
                 <li><a href="#">About</a></li>
             </ul>
             <section class="btn-toggle"><i class="fa-solid fa-bars"></i></section>
-            <section class="dropdown-menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About</a></li>
-            </section>
         </nav>
     </header>
 
@@ -36,7 +29,7 @@
                 <h1>Welcome to Jersey Central</h1>
                 <p>Jersey and Accessories</p><br>
                 <p align="justify">Jersey Central adalah destinasi utama untuk jersey sepak bola, di mana gairah bertemu dengan gaya. Dengan berbagai pilihan jersey asli, kami membantu Anda <b>Wear Your Pride, And Support Your Team</b> dengan penuh gaya. Baik di lapangan maupun saat mendukung dari luar, Jersey Central memberikan perlengkapan sempurna untuk menunjukkan kecintaan Anda pada permainan.</p><br>
-                <a href="#" class="btn-selengkapnya">More</a>
+                <a href="#" class="btn-more">More</a>
             </div>
             <img src="alsesoris.png" alt="Aksesoris" width="30%" height="30%">
         </section>
